# lab-code

./: CMakeLists.txt  README.md
Components/Components/Logic/: QuadcopterConstants.hpp
Components/Components/Offboard/: QuadcopterController.cpp  QuadcopterController.hpp  SafetyNet.hpp
Components/Components/TrajectoryGenerator/: SingleAxisTrajectory.hpp
Embedded/: Readme.md
Embedded/Apps/: apps.cmake  readme.md
Embedded/Apps/CalibrateIMU/: CMakeLists.txt  main.cpp
Embedded/Apps/FlightRecorder/: CMakeLists.txt  mainFlightRecorder.cpp
Embedded/Apps/QuadcopterLogic/: CMakeLists.txt  calibacc_params.c  ranging_params.c  (+1 more)
Embedded/LinkCMakeLists/Components/: CMakeLists.txt
PC-Apps/: CMakeLists.txt
PC-Apps/Simulator/: CMakeLists.txt  main.cpp
PC-Apps/TestApp/: CMakeLists.txt  main.cpp
PC-Apps/TrajectoryGeneratorExample/: CMakeLists.txt  Example.cpp
ROS/hiperlab_components/: CMakeLists.txt
ROS/hiperlab_rostools/: CMakeLists.txt  package.xml
Scripts/: CreateMocapPositionKF.py  ReadSimulationLog.py
Scripts/CascadedControllers/: ControllerStability.py  symbolic.py
Scripts/ComputeMoCapSpace/: ComputeSpace.py  camera.py  readme
Scripts/FilterDesign/: BilinearTransform.py  FilterDesign.py
Scripts/FirmwareUploader/: README.md  upload.sh
Scripts/PlotBagFiles/: Readme  battery.py  communicationFrequencies.py  imuSensors.py  moCap.py  moCapAttitude.py  moCapRates.py  rangingTest.py  ratesControl.py  uwbEstimate.py  vehicleState.py
Scripts/ReadFlightrecorderLog/: plotIMUDebugging.py  readFlightrecorderLog.py
Scripts/ReadUSBDataOut/: read_serial.py
(+21 files in other folders)
